--- a/web/sass/style.scss
+++ b/web/sass/style.scss
@@ -31,7 +31,7 @@ body {
     text-decoration: none;
   }
   font-family: "Metropolis-Regular", sans-serif;
-  background-image: url("../img/bg2.jpg");
+  background: url("../img/bg_screen.png") no-repeat center center fixed;
   background-size: cover;
   @media screen and(min-width: 768px) {
     background: url("../img/bg_screen.png") no-repeat center center fixed;
